# cfck

./: README.md  XMLAnalyzer.py  cfck.py  dotnet_web_config.prolog  fsce.py  setup.cfg
src/cfck/: BaseRenderer.py  SarifAnalyzer.py  SarifRenderer.py  StdoutRenderer.py  XMLAnalyzer.py  base_analyzer.py  cli.py  exception.py  finding_analyzer.py  sarif_renderer.py  single_file_analyzer.py  stdout_renderer.py
src/cfck/analysis/: XMLAnalyzer.py  sarif.py  xml.py
test/dotnet_web_config/: custom_header.config  trace_allowed.config
