[metadata]
name = cfck
version = 0.0.1
author = Tim Hemel
author_email = tim@securesoftware.nl
description = Analyze configuration files
long_description_content_type = text/markdown
long_description = file: README.md
url = https://github.com/timhemel/cfck
license_files = LICENSE
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: GNU Affero General Public License v3
	Operating System :: OS Independent
keywords =
	configuration check

[options]
package_dir =
	= src
packages = find:
python_requires = >=3.6
install_requires =
	Click
	lxml
	defusedxml
	sarif-om
	sarif-tools
tests_require =
	pytest

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
	cfck=cfck.cli:analyze

